--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: org-rich-yank
 
-# [[https://melpa.org/#/org-rich-yank][https://melpa.org/packages/org-rich-yank-badge.svg]]
+[[https://melpa.org/#/org-rich-yank][https://melpa.org/packages/org-rich-yank-badge.svg]]
 
 Do you often yank source code into your org files, manually
 surrounding it in =#+BEGIN_SRC= blocks? This package will give you a
@@ -13,11 +13,11 @@ link to the source file after the block.
 
 * Installation
 
-# ** MELPA
-# If you use [[https://melpa.org/][MELPA]], you can just do =M-x list-packages=, find
-# =org-rich-yank= in the list and hit =i x=.
+** MELPA
+If you use [[https://melpa.org/][MELPA]], you can just do =M-x list-packages=, find
+=org-rich-yank= in the list and hit =i x=.
 
-# ** Manual
+** Manual
 Just put =org-rich-yank.el= somewhere in =load-path=.
 
 
